# keycard

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: card_init.rs  card_operations.rs  credentials.rs  data_management.rs  handler.rs  key_operations.rs  mod.rs  pairing.rs  status.rs
crates/cli/src/utils/: mod.rs  record_type.rs  session.rs
crates/keycard/: Cargo.toml
crates/keycard/src/: application.rs  crypto.rs  error.rs  lib.rs  secure_channel.rs  session.rs  validation.rs
crates/keycard/src/commands/: derive_key.rs  export_key.rs  generate_key.rs  generate_mnemonic.rs  get_data.rs  get_status.rs  ident.rs  init.rs  load_key.rs  mod.rs  mutually_authenticate.rs  open_secure_channel.rs  pair.rs  pin.rs  remove_key.rs  select.rs  set_pinless_path.rs  sign.rs  store_data.rs  unpair.rs
crates/keycard/src/types/: application_info.rs  application_status.rs  capabilities.rs  keypair.rs  keypair_types.rs  mod.rs  signature.rs  version.rs
crates/signer/: Cargo.toml
crates/signer/examples/: send_transaction.rs
crates/signer/src/: signer.rs
