[package]
name = "keycard-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
## nexum-apdu
nexum-apdu-core.workspace = true
nexum-apdu-macros.workspace = true
nexum-apdu-globalplatform.workspace = true
nexum-apdu-transport-pcsc.workspace = true

nexum-keycard.workspace = true

clap = { workspace = true, features = ["derive"] }

alloy-primitives.workspace = true
tracing.workspace = true
iso7816-tlv.workspace = true

tracing-subscriber.workspace = true
